2013-12-23  Bingfeng Mei  <bmei@broadcom.com>

	PR middle-end/59569
	* gcc.c-torture/compile/pr59569-1.c: New test.
	* gcc.c-torture/compile/pr59569-2.c: Ditto.

2013-12-23  Marek Polacek  <polacek@redhat.com>

	PR c++/59111
	* g++.dg/cpp0x/pr59111.C: New test.
	* g++.dg/cpp1y/pr59110.C: New test.

2013-12-22  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/x86_64/abi/callabi/func-2a.c (dg-do): Remove
	target selector.
	* gcc.target/x86_64/abi/callabi/func-indirect-2a.c (dg-do): Ditto.
	* gcc.target/x86_64/abi/callabi/vaarg-4a.c (dg-do): Ditto.
	* gcc.target/x86_64/abi/callabi/vaarg-5a.c (dg-do): Ditto.

2013-12-20  Richard Earnshaw  <rearnsha@arm.com>

	* gcc.target/arm/nested-apcs.c: New test.

2013-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/59255
	* g++.dg/tree-prof/pr59255.C: New test.

2013-12-20  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/arm/neon-vceq_p64.c: New test.
	* gcc.target/arm/neon-vtst_p64.c: Likewise.

2013-12-20  Bingfeng Mei  <bmei@broadcom.com>

	PR tree-optimization/59544
	* gcc.target/i386/pr59544.c: New test.

2013-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/59413
	* gcc.c-torture/execute/pr59413.c: New test.

	* c-c++-common/ubsan/load-bool-enum.c: New test.

2013-12-04  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* lib/target-supports.exp (check_effective_target_arm_crypto_ok):
	New procedure.
	(add_options_for_arm_crypto): Likewise.
	* gcc.target/arm/crypto-vaesdq_u8.c: New test.
	* gcc.target/arm/crypto-vaeseq_u8.c: Likewise.
	* gcc.target/arm/crypto-vaesimcq_u8.c: Likewise.
	* gcc.target/arm/crypto-vaesmcq_u8.c: Likewise.
	* gcc.target/arm/crypto-vldrq_p128.c: Likewise.
	* gcc.target/arm/crypto-vmull_high_p64.c: Likewise.
	* gcc.target/arm/crypto-vmullp64.c: Likewise.
	* gcc.target/arm/crypto-vsha1cq_u32.c: Likewise.
	* gcc.target/arm/crypto-vsha1h_u32.c: Likewise.
	* gcc.target/arm/crypto-vsha1mq_u32.c: Likewise.
	* gcc.target/arm/crypto-vsha1pq_u32.c: Likewise.