@@ -1,5 +1,10 @@
 2013-12-23  Bingfeng Mei  <bmei@broadcom.com>
 
+	* gcc.dg/vect/vect-neg-store-1.c: New test.
+	* gcc.dg/vect/vect-neg-store-2.c: Ditto.
+
+2013-12-23  Bingfeng Mei  <bmei@broadcom.com>
+
 	PR middle-end/59569
 	* gcc.c-torture/compile/pr59569-1.c: New test.
 	* gcc.c-torture/compile/pr59569-2.c: Ditto.
